[gd_scene load_steps=9 format=3 uid="uid://jia8uyua1ipf"]

[ext_resource type="Texture2D" uid="uid://efds0pe5dnsq" path="res://resource/assets/backgrounds/skin_selector_bg.jpeg" id="1_fqcaj"]
[ext_resource type="Script" path="res://shared/scripts/skin_slector.gd" id="1_q2tim"]
[ext_resource type="Texture2D" uid="uid://brkdkfixklm1b" path="res://resource/assets/skins/PlayerOriginal.png" id="3_upabq"]
[ext_resource type="Texture2D" uid="uid://b68lahd4jn13c" path="res://resource/assets/skins/FemalePlayerOriginal.png" id="4_typcb"]
[ext_resource type="Theme" uid="uid://ccdfqfq2wd0rn" path="res://resource/themes/button_theme.tres" id="5_mycul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ux5t"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.862745, 0.643137, 0.364706, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3sji"]
bg_color = Color(0.862745, 0.643137, 0.364706, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.431373, 0.458824, 0.384314, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekjak"]
bg_color = Color(0.831373, 0.509804, 0.262745, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.654902, 0.384314, 0.168627, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SkinSlector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2tim")
metadata/_edit_vertical_guides_ = [384.0]
metadata/_edit_horizontal_guides_ = [550.0, 98.0, 254.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -188.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fqcaj")

[node name="SkinPreview" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -226.0
offset_right = 384.0
offset_bottom = 226.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="SkinPreview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -184.5
offset_right = 147.5
offset_bottom = 184.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4ux5t")

[node name="Sprite2D" type="Sprite2D" parent="SkinPreview"]
position = Vector2(192, 200)
scale = Vector2(5, 5)
hframes = 13
vframes = 21
frame = 130

[node name="SkinSelector" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 385.0
offset_top = 98.0
offset_right = 1152.0
offset_bottom = 550.0

[node name="Background" type="Panel" parent="SkinSelector"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.5
offset_top = -184.5
offset_right = 323.5
offset_bottom = 184.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l3sji")

[node name="Rows" type="Control" parent="SkinSelector"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.5
offset_top = -151.5
offset_right = 292.5
offset_bottom = 151.5
grow_horizontal = 2
grow_vertical = 2

[node name="SkinRow" type="Panel" parent="SkinSelector/Rows"]
layout_mode = 1
offset_right = 584.0
offset_bottom = 88.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ekjak")

[node name="SkinRow2" type="Panel" parent="SkinSelector/Rows"]
layout_mode = 1
offset_top = 107.0
offset_right = 584.0
offset_bottom = 195.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ekjak")

[node name="SkinRow3" type="Panel" parent="SkinSelector/Rows"]
layout_mode = 1
offset_top = 214.0
offset_right = 584.0
offset_bottom = 302.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ekjak")

[node name="Skins" type="Control" parent="SkinSelector"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SkinButton1" type="Button" parent="SkinSelector/Skins"]
layout_mode = 0
offset_left = 139.0
offset_top = 79.0
offset_right = 188.0
offset_bottom = 156.0

[node name="Sprite2D" type="Sprite2D" parent="SkinSelector/Skins/SkinButton1"]
position = Vector2(24, 31)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_upabq")
hframes = 13
vframes = 21
frame = 130

[node name="SkinButton2" type="Button" parent="SkinSelector/Skins"]
layout_mode = 0
offset_left = 235.0
offset_top = 79.0
offset_right = 284.0
offset_bottom = 156.0

[node name="Sprite2D" type="Sprite2D" parent="SkinSelector/Skins/SkinButton2"]
position = Vector2(24, 31)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_typcb")
hframes = 13
vframes = 21
frame = 130

[node name="ButtonContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.5
offset_top = -98.0
offset_right = 111.5
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="ButtonContainer"]
layout_mode = 2
offset_top = 22.0
offset_right = 220.0
offset_bottom = 75.0
theme = ExtResource("5_mycul")
theme_override_font_sizes/font_size = 32
text = "SELECCIONAR"

[node name="TittleContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_right = 96.5
offset_bottom = 99.0
grow_horizontal = 2

[node name="Label" type="Label" parent="TittleContainer"]
layout_mode = 2
offset_top = 27.0
offset_right = 193.0
offset_bottom = 72.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "PERSONAJES"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="SkinSelector/Skins/SkinButton1" to="." method="_on_skin_button_1_pressed"]
[connection signal="pressed" from="SkinSelector/Skins/SkinButton2" to="." method="_on_skin_button_2_pressed"]
[connection signal="pressed" from="ButtonContainer/Button" to="." method="_on_button_pressed"]
